web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__filter__examples__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nfilter age > 25\n"
---
SELECT
  *
FROM
  employees
WHERE
  age > 25

