web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__filter__examples__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nfilter (age > 25 || department != \"IT\")\n"
---
SELECT
  *
FROM
  employees
WHERE
  age > 25
  OR department <> 'IT'

