web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__filter__examples__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nfilter (department | in [\"IT\", \"HR\"])\n"
---
SELECT
  *
FROM
  employees
WHERE
  department IN ('IT', 'HR')

