web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__filter__examples__3.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nfilter (age | in 25..40)\n"
---
SELECT
  *
FROM
  employees
WHERE
  age BETWEEN 25 AND 40
